--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hiccup-server",
   "version": "0.0.1",
   "description": "A URL expander for local networks",
-  "main": "index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "test": "npm run test",
-    "hiccup": "sudo tsc index.ts; sudo node index.js"
+    "hiccup": "sudo tsc src/server.ts; sudo node src/server.js"
   },
   "author": "Patrick Davlin",
   "license": "ISC",
